# QF

./: .gitignore  AUTHORS  ChangeLog  README.md  deskExtractor.py  main.py  models.py  populate.py  pydesk.py  requirements.txt  setup.cfg  setup.py  test_pydesk.py  tox.ini
kbextractor/: extractor.py  kb_plugin_manager.py  kbmodels.py  main.py  plugin.py  populate.py  pydesk.py
kbextractor/plugins/destinations/: database.yapsy-plugin  ondisk.py  ondisk.yapsy-plugin  osd.py  osd.yapsy-plugin
kbextractor/plugins/destinations/database/: __init__.py  database.py  models.py  populate.py
kbextractor/plugins/sources/: pydesk.py  pydesk.yapsy-plugin
kbextractor/test/: test_osd_plugin.py  test_pydesk.py
