[metadata]
name = kbextractor
author = Rémy Greinhofer
author-email = remy.greinhofer@gmail.com
summary = Extract data from various KB providers
license = GPLv3
description-file = README.rst
requires-python = >=3.4
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Programming Language :: Python
[files]
packages =
    kbextractor